# OpenSiv3D-Template

./: .gitignore  CMakeLists.txt  Info-CMake.plist  LICENSE  README.md  clean.sh  setup.sh
OpenSiv3D-Template/: CMakeLists.txt  clean.sh  version
OpenSiv3D-Template/src/: Main.cpp
